# 30DayAI

day1/voiceBot/: main.py  pyproject.toml  tts.py
day2/STTTrails/: main.py  pyproject.toml
day2/langchain-ollama/: main.py  pyproject.toml  utils.py
day2/langchain_chatbot/: main.py  pyproject.toml
day3/deekseek-to-stt/: main.py  pyproject.toml
day5/browserUser/: README.md  findings.md  main.py  pyproject.toml  requirements.txt
day7/rag/: langchain_multimodal.ipynb
day8/demo_mvp/: .gitignore  COORDINATE_SCALING_UPDATES.md  README.md  coordinate_debug.py  coordinate_test.py  fixed_demo_plan.json  list_models_temp.py  pyproject.toml  ruff.toml  run.py  test_browser_movement.py  test_dynamic_refresh.py  test_scroll_handling.py
day8/demo_mvp/Instructions/: configuration.md  demonstration_flow_diagram.md  implementation_plan.md  mvp_scope.md  python_coding_standards.md
day8/demo_mvp/docs/: .placeholder
day8/demo_mvp/documents/website/: baiiplus_com_snapshot.html
day8/demo_mvp/scripts/: 01_upload_files.py  capture_screenshot.py  debug_coordinates.py  detect_resolution.py  hover_test.py  test_fixed_coordinates.py
day8/demo_mvp/src/: list_models_temp.py  main.py
day8/demo_mvp/src/core/: orchestrator.py
day8/demo_mvp/src/modules/: demonstration_module.py  qa_module.py  tts_module.py
day8/demo_mvp/src/services/: browser_service.py  gemini_service.py  mouse_service.py
day8/demo_mvp/src/utils/: __init__.py  config.py  helpers.py  screen_utils.py
day8/demo_mvp/tests/core/: __init__.py
day8/demo_mvp/tests/modules/: __init__.py
(+14 files in other folders)
