[project]
name = "voicebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "nltk>=3.9.1",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "rich>=14.0.0",
    "sounddevice>=0.5.1",
    "speechrecognition>=3.14.2",
    "suno-bark",
]

[tool.uv.sources]
suno-bark = { git = "https://github.com/suno-ai/bark.git" }
